FOLS3CL-33 - https://folio-org.atlassian.net/browse/FOLS3CL-33 (#44)